fix some issues

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nunjucks-phone-filter",
   "version": "0.0.1",
-  "description": "A 'phone' filter that formats phone numbers in Nunjucks",
+  "description": "A Nunjucks template filter that formats phone numbers",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
